--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI= "mongodb+srv://saqib:123lahore@testdata.5jhcy.mongodb.net/"
-PORT=3000
+MONGODB_URI= "mongodb+srv://abdulrehman:radxpro123!!!@user-tracking.y2dv5.mongodb.net/"
+PORT=27017
